# istio-crds

./: .gitignore  Dockerfile  README.md  connections-graph.py  datenimport.py  istio-graph.py  istio-objekt-liste.py  istio.py  kubectl.py  main.py  pyproject.toml  requirements.txt  sync-job.py
arangodb/: arangodb.md  datenimport-arangodb.py  datenimport-connections-arangodb.py  docker-compose.yml
arangodb/init/: create-istio-db.js
arangoweb/: app.js  index.html  style.css
datenbank/: docker-compose.yml
syncjob/: cronjob.yaml  namespace.yaml  rbac.yaml  secret.example.yaml  syncjob.md
tests/: conftest.py  test_connections_graph.py  test_datenimport.py  test_datenimport_arangodb.py  test_datenimport_connections_arangodb.py  test_istio.py  test_istio_graph.py  test_istio_objekt_liste.py  test_kubectl.py  test_main.py  test_sync_job.py
web/: app.js  index.html  neo4j-client.js
