[project]
name = "istio-crds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=36.0.3",
    "neo4j>=6.2.0",
    "python-arango>=8.2.0",
    "python-dotenv>=1.2.2",
    "websockets>=16.1.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
]
